test/error/StForUninitializedInit.fu
public static class Test
{
	public static bool Run()
	{
		for (int i; i < 10; ) { //ERROR: Uninitialized variable // TODO: with i++
		}
		return true;
	}
}
